- cambiato tema - aggiunto panel condizionale - aggiunte tabs - cambiato lingua - messo HelpText per guidare utente

--- a/README.html
+++ b/README.html
@@ -367,9 +367,31 @@ summary {
 
 <div id="calcola_finanziamento" class="section level1">
 <h1>calcola_finanziamento</h1>
-<p>simple shiny tool that computes financial information given a dataset (IN ITINERE)</p>
+<p>simple shiny tool that computes financial information given the contract (IN ITINERE)</p>
 <div id="in-itinere-development-project" class="section level2">
 <h2><strong>IN ITINERE DEVELOPMENT PROJECT</strong></h2>
+<div id="cosa-voglio-creare-per-punti" class="section level3">
+<h3>cosa voglio creare, per punti:</h3>
+<ul>
+<li>far vedere come è strutturato il finanziamento</li>
+<li>creare delle celle dove inserire i valori più importanti.
+<ul>
+<li>quanto dura il finanziamento</li>
+<li>quanto è il tasso di interesse</li>
+<li>che tipo di ammortamento è:</li>
+<li>a che punto cambia il tasso di interesse e come cambia</li>
+<li>fammi vedere quanto debuto rimane ad un determianto tempo t</li>
+</ul></li>
+<li>plotta grafici
+<ul>
+<li>andamento tasso di interesse</li>
+<li>andamento quota capitale</li>
+<li>andamento quota interessi</li>
+<li>andamento debito residuo</li>
+<li>comparazione con tassi d’interesse anatocismo</li>
+</ul></li>
+</ul>
+</div>
 </div>
 </div>
 
