commit 1. Download csv server side 1. Download csv UI side

--- a/README.html
+++ b/README.html
@@ -367,9 +367,37 @@ summary {
 
 <div id="calcola_finanziamento" class="section level1">
 <h1>calcola_finanziamento</h1>
-<p>simple shiny tool that computes financial information given the contract (IN ITINERE)</p>
-<div id="in-itinere-development-project" class="section level2">
-<h2><strong>IN ITINERE DEVELOPMENT PROJECT</strong></h2>
+simple shiny tool that computes financial information given the contract (<code>IN ITINERE</code>)
+<div align="center">
+<pre><code>&lt;img width=&quot;500&quot; height=&quot;350&quot; src=&quot;media/logo.svg&quot; alt=&quot;Awesome&quot;&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;hr&gt;
+&lt;p&gt;
+    &lt;p&gt;
+        &lt;sup&gt;
+            &lt;a href=&quot;https://github.com/sponsors/sindresorhus&quot;&gt;My open source work is supported by the community&lt;/a&gt;
+        &lt;/sup&gt;
+    &lt;/p&gt;
+    &lt;sup&gt;Special thanks to:&lt;/sup&gt;
+    &lt;br&gt;
+    &lt;br&gt;
+    &lt;a href=&quot;https://github.com/botpress/botpress&quot;&gt;
+        &lt;img src=&quot;https://sindresorhus.com/assets/thanks/botpress-logo.svg&quot; width=&quot;260&quot; alt=&quot;Botpress&quot;&gt;
+    &lt;/a&gt;
+    &lt;br&gt;
+    &lt;sub&gt;&lt;b&gt;Botpress is an open-source conversational assistant creation platform.&lt;/b&gt;&lt;/sub&gt;
+    &lt;br&gt;
+    &lt;sub&gt;They &lt;a href=&quot;https://github.com/botpress/botpress/blob/master/.github/CONTRIBUTING.md&quot;&gt;welcome contributions&lt;/a&gt; from anyone, whether you&#39;re into machine learning,&lt;br&gt;want to get started in open-source, or just have an improvement idea.&lt;/sub&gt;
+    &lt;br&gt;
+&lt;/p&gt;
+&lt;hr&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;
+&lt;br&gt;</code></pre>
+</div>
+<p><em>this is has already been deployed even thougt it is not completed</em> —-&gt; deployment happens <a href="http://niccolosalvini.shinyapps.io/calcola_finanziamento"><code>HERE</code></a></p>
 <div id="cosa-voglio-creare-per-punti" class="section level3">
 <h3>cosa voglio creare, per punti:</h3>
 <ul>
@@ -391,7 +419,6 @@ summary {
 <li>comparazione con tassi d’interesse anatocismo</li>
 </ul></li>
 </ul>
-</div>
 </div>
 </div>
 
