--- a/README.html
+++ b/README.html
@@ -367,49 +367,17 @@ summary {
 
 <div id="calcola_finanziamento" class="section level1">
 <h1>calcola_finanziamento</h1>
-simple shiny tool that computes financial information given the contract (<code>IN ITINERE</code>)
-<div align="center">
-<pre><code>&lt;img width=&quot;500&quot; height=&quot;350&quot; src=&quot;media/logo.svg&quot; alt=&quot;Awesome&quot;&gt;
-&lt;br&gt;
-&lt;br&gt;
-&lt;hr&gt;
-&lt;p&gt;
-    &lt;p&gt;
-        &lt;sup&gt;
-            &lt;a href=&quot;https://github.com/sponsors/sindresorhus&quot;&gt;My open source work is supported by the community&lt;/a&gt;
-        &lt;/sup&gt;
-    &lt;/p&gt;
-    &lt;sup&gt;Special thanks to:&lt;/sup&gt;
-    &lt;br&gt;
-    &lt;br&gt;
-    &lt;a href=&quot;https://github.com/botpress/botpress&quot;&gt;
-        &lt;img src=&quot;https://sindresorhus.com/assets/thanks/botpress-logo.svg&quot; width=&quot;260&quot; alt=&quot;Botpress&quot;&gt;
-    &lt;/a&gt;
-    &lt;br&gt;
-    &lt;sub&gt;&lt;b&gt;Botpress is an open-source conversational assistant creation platform.&lt;/b&gt;&lt;/sub&gt;
-    &lt;br&gt;
-    &lt;sub&gt;They &lt;a href=&quot;https://github.com/botpress/botpress/blob/master/.github/CONTRIBUTING.md&quot;&gt;welcome contributions&lt;/a&gt; from anyone, whether you&#39;re into machine learning,&lt;br&gt;want to get started in open-source, or just have an improvement idea.&lt;/sub&gt;
-    &lt;br&gt;
-&lt;/p&gt;
-&lt;hr&gt;
-&lt;br&gt;
-&lt;br&gt;
-&lt;br&gt;
-&lt;br&gt;</code></pre>
-</div>
+<p>simple shiny tool that computes financial information given the contract (<code>IN ITINERE</code>)</p>
+<hr />
 <p><em>this is has already been deployed even thougt it is not completed</em> —-&gt; deployment happens <a href="http://niccolosalvini.shinyapps.io/calcola_finanziamento"><code>HERE</code></a></p>
-<div id="cosa-voglio-creare-per-punti" class="section level3">
-<h3>cosa voglio creare, per punti:</h3>
+<div id="road-map" class="section level3">
+<h3>Road map:</h3>
 <ul>
 <li>far vedere come è strutturato il finanziamento</li>
-<li>creare delle celle dove inserire i valori più importanti.
-<ul>
-<li>quanto dura il finanziamento</li>
-<li>quanto è il tasso di interesse</li>
-<li>che tipo di ammortamento è:</li>
-<li>a che punto cambia il tasso di interesse e come cambia</li>
 <li>fammi vedere quanto debuto rimane ad un determianto tempo t</li>
-</ul></li>
+<li>invertire tabella nel primo panel e il primo panel nel terzo</li>
+<li>sistemare download button</li>
+<li></li>
 <li>plotta grafici
 <ul>
 <li>andamento tasso di interesse</li>
